--- a/test.ipynb
+++ b/test.ipynb
@@ -1,55 +1,22 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python373jvsc74a57bd031f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6",
-   "display_name": "Python 3.7.3 64-bit"
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Jupyter Notebook Testbed\n",
     "\n",
     "Dis is test."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [
-    "NUMBER = 100\n",
-    "for num in range(1, NUMBER + 1):\n",
-    "    text = \"Fizz\" if num % 3 == 0 else \"\"\n",
-    "    text += \"Buzz\" if num % 5 == 0 else \"\"\n",
-    "    print(text if text else num)"
-   ],
    "cell_type": "code",
-   "metadata": {},
    "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1\n",
       "2\n",
@@ -153,6 +120,13 @@
       "Buzz\n"
      ]
     }
+   ],
+   "source": [
+    "NUMBER = 100\n",
+    "for num in range(1, NUMBER + 1):\n",
+    "    text = \"Fizz\" if num % 3 == 0 else \"\"\n",
+    "    text += \"Buzz\" if num % 5 == 0 else \"\"\n",
+    "    print(text if text else num)"
    ]
   },
   {
@@ -161,8 +135,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Ruby worked\n"
      ]
@@ -175,13 +149,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Choose a place to eat\n",
     "\n",
     "Use the first cell to set your choices, use the second to pick a random place to eat"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -189,8 +163,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Overwriting choices.txt\n"
      ]
@@ -215,10 +189,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "For fucks sake, just order Juicy Platters\n\n"
+      "For fucks sake, just order Juicy Platters\n",
+      "\n"
      ]
     }
    ],
@@ -236,5 +211,35 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "faf34a75f603593ead1ab66baf70678bc661485d79d4ea7ea0cb33bd0b166ef5"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.3 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
